<resources>
    <string name="app_name">Xabber NG</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">none</string>
    <string name="error_invalid_jid_format" translatable="false">Invalid JID format</string>
    <string name="error_account_already_exists" translatable="false">Account already exists, please choose another JID</string>
    <string name="error_invalid_credentials" translatable="false">Invalid JID, username, or password</string>
    <string name="error_incorrect_password" translatable="false">Incorrect password</string>
    <string name="error_account_disabled" translatable="false">Account is disabled: %1$s</string>
    <string name="error_ocra_failed" translatable="false">DEVICES-OCRA authentication failed: %1$s</string>
    <string name="error_authentication_failed" translatable="false">Authentication failed: %1$s</string>
    <string name="error_unexpected" translatable="false">Unexpected error: %1$s</string>
    <string name="error_sync_failed" translatable="false"> sync failed</string>
    <string name="dialog_title_permission_denied">Permission denied</string>
    <string name="offer_to_open_settings">Would you like to open app settings if change your mind?</string>
    <string name="dialog_button_open">Open</string>
    <string name="account_settings_chat" translatable="false">account settings chat</string>
    <string name="account_settings_background" translatable="false">account settings background</string>
    <string name="account_settings_choose_background" translatable="false">account settings choose_background</string>
    <string name="account_settings_display" translatable="false">account settings display</string>
    <string name="account_settings_show_background" translatable="false">account settings show_background</string>
    <string name="account_settings_chat_display_settings" translatable="false">account settings chat_display_settings</string>
    <string name="account_settings_messaging" translatable="false">account settings messaging</string>
    <string name="account_settings_send_by_enter" translatable="false">account settings send_by_enter</string>
    <string name="account_settings_message_sending_options" translatable="false">account settings message_sending_options</string>
    <string name="account_settings_contact_list" translatable="false">account settings contact_list</string>
    <string name="account_settings_display_options" translatable="false">account settings display_options</string>
    <string name="account_settings_offline_contacts" translatable="false">account settings offline_contacts</string>
    <string name="account_settings_show_avatars" translatable="false">account settings show_avatars</string>
    <string name="account_settings_notificaions" translatable="false">account settings notificaions</string>
    <string name="account_settings_in_app_notifications" translatable="false">account settings in_app_notifications</string>
    <string name="account_settings_chat_notifications" translatable="false">account settings chat notifications</string>
    <string name="account_settings_chat_message_preview" translatable="false">account settings chat_message_preview</string>
    <string name="account_settings_in_app_sounds" translatable="false">account settings in_app_sounds</string>
    <string name="account_settings_chat_sound" translatable="false">account settings chat sounds</string>
    <string name="account_settings_chat_vibration" translatable="false">account settings chat vibration</string>
    <string name="account_settings_chat_show_previews" translatable="false">account settings chat show previews</string>
    <string name="account_settings_groupchat_notifications" translatable="false">account settings groupchat notifications</string>
    <string name="account_settings_groupchat_sound" translatable="false">account settings groupchat sound</string>
    <string name="account_settings_groupchat_vibration" translatable="false">account settings groupchat vibration</string>
    <string name="account_settings_groupchat_show_previews" translatable="false">account settings groupchat show previews</string>
    <string name="account_settings_chat_notifications_manage" translatable="false">account settings chat notification manage</string>
    <string name="account_settings_groupchat_notifications_manage" translatable="false">account settings groupchat notification manage</string>
    <string name="account_settings_privacy" translatable="false">account settings privacy</string>
    <string name="account_settings_privacy_settings" translatable="false">account settings privacy_settings</string>
    <string name="account_settings_privacy_level" translatable="false">account settings privacy level</string>
    <string name="account_settings_typing_notification" translatable="false">account settings typing_notification</string>
    <string name="settings_choose_language" translatable="false">settings choose language</string>
    <string name="account_settings_developer" translatable="false">account settings developer</string>
    <string name="account_settings_show_circles" translatable="false">account settings show_circles</string>
    <string name="account_settings_developer_mode" translatable="false">account settings developer_mode</string>
    <string name="account_settings_write_log" translatable="false">account settings write_log</string>
    <string name="xabber_image_content_description">Xabber application icon</string>
    <string name="start_title_label">Xabber</string>
    <string name="start_subtitle_label">World\'s best XMPP experience</string>
    <string name="start_signin_button_label">Connect existing account</string>
    <string name="start_signup_button_label">Create new account</string>
    <string name="start_comment_label">New accounts are created for free on xabber.org domain.You can use Xabber to connect to any compatible XMPP account on any server.</string>
    <string name="signin_toolbar_title_1">Sign In</string>
    <string name="signin_toolbar_title_2">Server features</string>
    <string name="signin_title_label_1">Hi! Connect to your existing XMPP ID</string>
    <string name="signin_title_label_template_2">Hang on there a second! Checking if %s supports all necessary features.</string>
    <string name="signin_edit_text_login_label">username@xabber.com</string>
    <string name="signin_edit_text_password_label">password</string>
    <string name="signin_subtitle_label_1_start">If you don\'t have an account yet, </string>
    <string name="signin_subtitle_label_1_end"> to sign up for an account on xabber.org server.</string>
    <string name="press_here">press here</string>
    <string name="signin_subtitle_label_2">Shiny! Everything\'s fine! Press the button below and start messaging r-r-right away!!</string>
    <string name="signin_rock_button_label">Let\'s rock!</string>
    <string name="signin_subtitle_error_message">Invalid username or password</string>
    <string name="signin_connect_button_label_1">Connect</string>
    <string name="signin_connect_button_label_2">Connecting…</string>
    <string name="feature_name_1">Communicating with server</string>
    <string name="feature_name_2">Checking credentials</string>
    <string name="feature_name_3">Requesting sever capabilities</string>
    <string name="feature_name_4">Message archive</string>
    <string name="feature_name_5">Synchronization</string>
    <string name="feature_name_6">Push notifications</string>
    <string name="feature_name_7">Message editing</string>
    <string name="feature_name_8">Device management</string>
    <string name="feature_name_9">Publish-subscribe</string>
    <string name="feature_name_10">File upload</string>
    <string name="signup_next_button">Next</string>
    <string name="signup_nickname_toolbar_title">Sign Up</string>
    <string name="signup_nickname_title_label">Let’s get Started!\nWhat’s your name?</string>
    <string name="signup_nickname_edit_text_label">Nickname</string>
    <string name="signup_nickname_subtitle">Use the name or a nickname you are most comfortable with. Your name will be visible to other users of the XMPP network.</string>
    <string name="signup_username_toolbar_title">Username</string>
    <string name="signup_username_title">Great! Now, choose a username\n for people to find you on Xabber.</string>
    <string name="signup_username_edit_text_label">username</string>
    <string name="signup_username_subtitle">The account will be created on xabber.org server. It can be used to communicate with users of other servers.</string>
    <string name="signup_username_error_subtitle">Sorry! That username isn’t available.</string>
    <string name="signup_username_success_subtitle">✓ Nice! That username is available.</string>
    <string name="signup_password_toolbar_title">Password</string>
    <string name="mute_for_1_hour">Mute for 1 hour</string>
    <string name="mute_for_1_day">Mute for 1 day</string>
    <string name="mute_for_1_week">Mute for 1 week</string>
    <string name="mute_forever">Mute forever</string>
    <string name="unmute">Unmute</string>
    <string name="menu_item_chats">Chat</string>
    <string name="menu_item_call">Calls</string>
    <string name="menu_item_contacts">Contacts</string>
    <string name="menu_item_notifications">Notifications</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_saved_messages">Saved messages</string>
    <string name="archived_chat">Archive</string>
    <string name="menu_item_delete_chat">Delete chat</string>
    <string name="menu_item_enable_notifications">Enable notifications</string>
    <string name="menu_item_edit_contact_account">Edit</string>
    <string name="menu_item_send_contact">Send</string>
    <string name="menu_item_delete_contact_account">Delete contact</string>
    <string name="menu_item_copy_message">   Copy</string>
    <string name="menu_item_forward_message">   Forward</string>
    <string name="menu_item_reply_message">   Reply</string>
    <string name="menu_item_edit_message">   Edit</string>
    <string name="menu_item_delete_message">   Delete</string>
    <string name="menu_item_call_out">Call out</string>
    <string name="menu_item_disable_notifications">Disable notifications</string>
    <string name="menu_item_clear_message_history">Clear message history</string>
    <string name="music_label">Music</string>
    <string name="contact_label">Contact</string>
    <string name="camera_label">Camera</string>
    <string name="file_label">File</string>
    <string name="location_label">Location</string>
    <string name="im_description_pin_message">pin message</string>
    <string name="settings">Settings</string>
    <string name="image_interface_settings_description">Interface settings</string>
    <string name="title_interface_settings">Interface</string>
    <string name="image_notifications_settings_description">Notifications settings</string>
    <string name="title_notifications_settings">Notifications</string>
    <string name="image_data_and_storage_settings_description">Data and storage settings</string>
    <string name="title_data_and_storage_settings">Data and storage</string>
    <string name="image_privacy_settings_description">Privacy settings</string>
    <string name="title_privacy_settings">Privacy</string>
    <string name="image_connection_settings_description">Connection settings</string>
    <string name="title_connection_settings">Connection</string>
    <string name="image_debug_settings_description">Debug settings</string>
    <string name="title_debug_settings">Debug</string>
    <string name="image_language_settings_description">Language settings</string>
    <string name="title_language_settings">Language</string>
    <string name="english_default">English (Default)</string>
    <string name="menu_item_contact_qr_code">Contact qr code</string>
</resources>