<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_content_copy"
        android:title="@string/menu_item_copy_message" />

    <item
        android:id="@+id/pin"
        android:icon="@drawable/ic_push_pin_grey"
        android:title="@string/im_description_pin_message" />

    <item
        android:id="@+id/forward"
        android:icon="@drawable/ic_forward"
        android:title="@string/menu_item_forward_message" />

    <item
        android:id="@+id/reply"
        android:icon="@drawable/ic_reply_grey"
        android:title="@string/menu_item_reply_message" />

    <item
        android:id="@+id/delete_message"
        android:iconTint="@color/red_500"
        android:icon="@drawable/ic_trash_red"
        android:title="@string/menu_item_delete_message" />
</menu>