<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >
                <item
                    android:id="@+id/chats"
                    android:enabled="true"
                    android:icon="@drawable/chat_24px"
                    android:title="@string/menu_item_chats" />

                <item
                    android:id="@+id/calls"
                    android:icon="@drawable/call_24px"
                    android:title="@string/menu_item_call" />
                <item
                    android:id="@+id/notifications"
                    android:icon="@drawable/notifications_24px"
                    android:title="@string/menu_item_notifications" />
    <item
        android:id="@+id/contacts"
        android:icon="@drawable/group_24px"
        android:title="@string/menu_item_contacts" />
    <item
                    android:id="@+id/archive"
                    android:icon="@drawable/archive_24px"
                    android:title="@string/archived_chat" />
    <item
        android:id="@+id/saved_messages"
        android:icon="@drawable/bookmark_24px"
        android:title="@string/menu_item_saved_messages" />


</menu>