<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_content_copy_grey"
        android:title="@string/menu_item_copy_message_text" />

    <item
        android:id="@+id/forward"
        android:icon="@drawable/ic_forward_grey"
        android:title="@string/menu_item_forward_message" />

    <item
        android:id="@+id/reply"
        android:icon="@drawable/ic_reply_grey"
        android:title="@string/menu_item_reply_message" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit_grey"
        android:title="@string/menu_item_edit_message" />

    <item
        android:id="@+id/delete_message"
        android:icon="@drawable/ic_trash_red"
        android:title="@string/menu_item_delete_message" />
</menu>