<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/attach_scroll_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/camera"
            style="@style/AttachmentBottomSheetAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_camera_circle"
            android:text="@string/camera_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/file"
            style="@style/AttachmentBottomSheetAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/file_circle"
            android:text="@string/file_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/location"
            style="@style/AttachmentBottomSheetAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/location_circle"
            android:text="@string/location_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contact"
            style="@style/AttachmentBottomSheetAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/contact_circle"
            android:text="@string/contact_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/music"
            style="@style/AttachmentBottomSheetAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/music_circle"
            android:text="@string/music_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_messages"
            style="@style/AttachmentBottomSheetAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_add_circle"
            android:text="@string/music_label" />
    </LinearLayout>
</HorizontalScrollView>