<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    tools:parentTag="androidx.appcompat.widget.LinearLayoutCompat">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/settings"
        android:textColor="@color/blue_500"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/interface_settings"
            style="@style/ClickableViewGroup"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_interface"
                style="@style/SettingsIcon"
                android:backgroundTint="@color/cyan_500"
                android:contentDescription="@string/image_interface_settings_description"
                android:src="@drawable/ic_chat_outline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AccountSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_interface_settings"

                app:layout_constraintStart_toEndOf="@id/image_interface"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:background="@color/grey_300" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/notifications"
            style="@style/ClickableViewGroup"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_notifications"
                style="@style/SettingsIcon"
                android:backgroundTint="@color/green_500"
                android:contentDescription="@string/image_notifications_settings_description"
                android:src="@drawable/ic_client_outline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AccountSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_notifications_settings"

                app:layout_constraintStart_toEndOf="@id/image_notifications"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:background="@color/grey_300" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/data_and_storage"
            style="@style/ClickableViewGroup"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_data"
                style="@style/SettingsIcon"
                android:backgroundTint="@color/red_500"
                android:contentDescription="@string/image_data_and_storage_settings_description"
                android:src="@drawable/draft_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AccountSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_data_and_storage_settings"

                app:layout_constraintStart_toEndOf="@id/image_data"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:background="@color/grey_300" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/privacy"
            style="@style/ClickableViewGroup"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_privacy"
                style="@style/SettingsIcon"
                android:backgroundTint="@color/dark_purple_500"
                android:contentDescription="@string/image_privacy_settings_description"
                android:src="@drawable/ic_group_private_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AccountSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_privacy_settings"

                app:layout_constraintStart_toEndOf="@id/image_privacy"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:background="@color/grey_300" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/connection"
            style="@style/ClickableViewGroup"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_connection"
                style="@style/SettingsIcon"
                android:backgroundTint="@color/orange_500"
                android:contentDescription="@string/image_connection_settings_description"
                android:src="@drawable/ic_index_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AccountSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_connection_settings"

                app:layout_constraintStart_toEndOf="@id/image_connection"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:background="@color/grey_300" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/debug"
            style="@style/ClickableViewGroup"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_debug"
                style="@style/SettingsIcon"
                android:backgroundTint="@color/teal_500"
                android:contentDescription="@string/image_debug_settings_description"
                android:src="@drawable/ic_bug_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AccountSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_debug_settings"

                app:layout_constraintStart_toEndOf="@id/image_debug"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:background="@color/grey_300" />

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/ClickableViewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_language"
                style="@style/SettingsIcon"
                android:backgroundTint="@color/brown_500"
                android:contentDescription="@string/image_language_settings_description"
                android:src="@drawable/language_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AccountSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_language_settings"
                app:layout_constraintBottom_toTopOf="@id/tv_subtitle_language"
                app:layout_constraintStart_toEndOf="@id/image_language"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_subtitle_language"
                style="@style/AccountSettingsSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_language" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>